--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          start: npm start
+         # start: npm start
           wait-on: 'http://localhost:3000'
           record: true
           config-file: cypress.config.js # Or your custom config file name
